examples/test/testpolicy14281.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14281
  namespace: namespace191
spec:
  podSelector:
    matchLabels:
      key20: value30
      key42: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value32
          key13: value4
      podSelector:
        matchLabels:
          key15: value31
          key44: value28
          key37: value14
